fix: overflow-y hidden

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,7 @@ body {
   background-color: #0d1117;
   font-family: 'Manrope', sans-serif;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 body,
